# comlib

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
comlib-common/: Cargo.toml
comlib-geometry/: Cargo.toml
comlib-geometry/src/: lib.rs  polygon.rs  primitive.rs  unit.rs
comlib-geometry/tests/: primitive.rs
comlib-input/: Cargo.toml
comlib-io/: Cargo.toml  LICENSE-MIT
comlib-math/: Cargo.toml
comlib-range/: Cargo.toml
comlib-string/: Cargo.toml
comlib-string/src/: lib.rs  rolling_hash.rs
comlib-string/tests/: rolling_hash.rs
comlib_common/: all.html  index.html  sidebar-items.js  struct.MiniMap.html
comlib_geometry/: all.html  enum.LineIntersection.html  enum.Ordering.html  enum.SegmentIntersection.html  fn.convex_hull.html  index.html  sidebar-items.js  struct.Line.html  struct.Point.html  struct.Polygon.html  struct.PolygonSegmentIter.html  struct.Segment.html  struct.Unit.html  trait.ValidCoordinate.html
comlib_input/: all.html  index.html  macro.input_pattern!.html  macro.input_pattern.html  sidebar-items.js  struct.Input.html  trait.Consumable.html  trait.InputPattern.html
comlib_io/: all.html  fn.spaced.html  index.html  macro.input_pattern!.html  macro.input_pattern.html  sidebar-items.js  struct.Input.html  trait.Consumable.html  trait.InputPattern.html
comlib_math/: all.html  enum.Sign.html  fn.factorize.html  fn.gcd.html  fn.is_prime.html  fn.lcm.html  fn.mod_pow.html  fn.next_permutation.html  index.html  sidebar-items.js  struct.Mod1e9p7.html  struct.ModInt.html  struct.PrimeSieve.html  (+10 more)
(+2530 files in other folders)
