[package]
name = "comlib-geometry"
version = "0.1.0"
authors = ["Henrik Lievonen <henrik.lievonen@hotmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comlib-math = { path = "../comlib-math" }
