[package]
name = "comlib-string"
version = "0.1.0"
authors = ["Henrik Lievonen <henrik.lievonen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
comlib-common = { path="../comlib-common" }
comlib-range = { path="../comlib-range" }
comlib-math = { path="../comlib-math" }